<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.vaijyant.group08_hw06.AddInstructorFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/imgBtnRegister_ai"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="?android:attr/colorBackground"
            android:scaleType="fitXY"
            app:srcCompat="@android:drawable/ic_menu_camera" />

        <EditText
            android:id="@+id/editRegFirstName_ai"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hintFirstName"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editRegLastName_ai"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hintLastName"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editEmail_ai"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hintEmail"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editRegPersonalWebsite_ai"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hintWebsite"
            android:inputType="textPersonName" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <Button
                android:id="@+id/btnReset_ai"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/btnRegister_ai"
                android:layout_alignParentStart="true"
                android:layout_marginEnd="25dp"
                android:text="@string/btnReset" />

            <Button
                android:id="@+id/btnRegister_ai"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="25dp"
                android:layout_toEndOf="@+id/btnReset_ai"
                android:text="@string/btnSave" />
        </LinearLayout>

    </LinearLayout>

</FrameLayout>
